--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react-dom": "17.0.1"
   },
   "devDependencies": {
+    "@types/node": "^14.14.13",
+    "@types/react": "^17.0.0",
     "postcss-preset-env": "^6.7.0",
-    "tailwindcss": "^2.0.2"
+    "tailwindcss": "^2.0.2",
+    "typescript": "^4.1.3"
   }
 }
