--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "storybook": "start-storybook -p 6006 -c .storybook"
   },
   "dependencies": {
     "next": "10.0.3",
@@ -13,9 +14,14 @@
     "react-dom": "17.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@storybook/react": "^6.1.11",
     "@types/node": "^14.14.13",
     "@types/react": "^17.0.0",
+    "awesome-typescript-loader": "^5.2.1",
+    "babel-loader": "^8.2.2",
     "postcss-preset-env": "^6.7.0",
+    "react-docgen-typescript-loader": "^3.7.2",
     "tailwindcss": "^2.0.2",
     "typescript": "^4.1.3"
   }
